--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,127 @@
 /* You can add global styles to this file, and also import other style files */
+/* styles.css */
+@import "./variables.scss";
+* {
+    margin: 0;
+    padding: 0;
+    @include box-size;
+}
+body {
+    @include poppins-regular;
+    margin: 0;
+    padding: 0;
+    font-size: 16px;
+}
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 15px;
+}
+
+.book {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 10px;
+}
+
+.book img {
+    max-width: 100%;
+    height: auto;
+}
+
+.book-details {
+    height: 100%;
+    position: relative;
+    text-align: center;
+    h4 {
+        font-size: 16px;
+    }
+    p {
+        font-size: 14px;
+        width: 120px;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
+    }
+}
+
+.book-main {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.book {
+    display: flex;
+    width: 140px;
+    height: 340px;
+    padding: 10px;
+    border-radius: 8px;
+    background: #ffffff;
+    box-shadow:
+        10px 10px 20px #d9d9d9,
+        -10px -10px 20px #ffffff;
+    flex-direction: column;
+}
+
+.img-cont {
+    width: 100%;
+    height: 200px;
+}
+
+.book img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.book-details h4 {
+    margin-top: 0;
+}
+
+.btn-det {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
+    padding: 0.5em 1em;
+    border: none;
+    background-color: #007bff;
+    color: white;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #0056b3;
+}
+
+.error {
+    color: red;
+}
+
+
+.spinner {
+    text-align: center;
+    margin: 20px 0;
+}
+
+.error {
+    color: red;
+    text-align: center;
+}
+
+@media (min-width: 600px) {
+
+
+    .book img {
+        width: 150px;
+    }
+
+    .book-details {
+
+        text-align: left;
+    }
+}
